Archive2/f0/bf1db4e7199f88/output
main.cpp: In function 'int main()':
main.cpp:17:19: error: expected '}' at end of input
     cout << nota*2;
                   ^
